--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL       = ""
+baseURL       = "/"
 languageCode  = "en-us"
 title         = "Studio Mizutama Official Site"
 theme         = "roxo"
