--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ summarylength = 25
   logo = "images/mizutamalogo.svg"
   dateFormat = "26 FEB 1994"
   # Meta data
-  description = "Studio Mizutama | Animation Studio With Volunteers on the Internet"
+  description = "Studio Mizutama | Online Animation Studio"
   author = "Studio Mizutama"
   # Google Analitycs
   # googleAnalitycsID = "Your ID"
@@ -53,8 +53,8 @@ summarylength = 25
   [params.banner]
     enable                = true
     background_image      = "images/backgrounds/hero-background.png"
-    heading               = "Animation Studio With Volunteers on the Internet"
-    tagline               = "WE WORK HARD, WE PLAY HARD"
+    heading               = "Online Animation Studio"
+#    tagline               = "WE WORK HARD, WE PLAY HARD"
     primary_button        = "See Our Works"
     primary_button_url    = "works"
     secondary_button      = "Connect with Us"
