--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ summarylength = 25
   [params.portfolio]
     enable    = true
     title     = "OUR RECENT WORKS"
-    subtitle  = "We are making short animation movies and applications for animation production efficiency."
+    subtitle  = "We are making original animes and apps for anime creators."
 
   [params.call_to_action]
     enable              = true
@@ -114,4 +114,4 @@ summarylength = 25
       # Footer Service
       [params.footer.service]
         title       = "Our Activities"
-        description = "Animation & Motion Graphics<br>UI & UX Design<br>Application Development<br>IT Infrastructure Construction"
+        description = "Animation & Motion Graphics<br>UI & UX Design<br>Application Development"
