add news to top page

--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ summarylength = 25
   # Google Analitycs
   # googleAnalitycsID = "Your ID"
   # We're using formspree.io for form handling, paste your formspree url below
-  formspreeFormUrl  = "https://formspree.io/f/minorin@studio-mizutama.net"
+  # formspreeFormUrl  = "https://formspree.io/f/minorin@studio-mizutama.net"
   customCSS = ["/css/custom.css"]
   og_image = "/images/card.png"
   
