--- a/config.toml
+++ b/config.toml
@@ -123,3 +123,6 @@ summarylength = 25
       [params.footer.service]
         title       = "Our Activities"
         description = "Animation & Motion Graphics<br>UI & UX Design<br>Application Development "
+
+ [markup.goldmark.renderer]
+  unsafe = true
