--- a/config.toml
+++ b/config.toml
@@ -118,7 +118,7 @@ summarylength = 25
         [[params.footer.social.link]]
           name = "Twitter"
           name_s = "twitter"
-          url  = "https://twitter.com/MinoriMizutama"
+          url  = "https://twitter.com/Studio_Mizutama"
       # Footer Service
       [params.footer.service]
         title       = "Our Activities"
