--- a/data/team.yml
+++ b/data/team.yml
@@ -7,7 +7,7 @@ members  :
     #designation : 
     github      : https://github.com/En-sp
     qiita       : https://qiita.com/enforreal
-    twitter     : https://twitter.com/enchandayo/
+    #twitter     : https://twitter.com/enchandayo/
 
   - image       : https://pbs.twimg.com/profile_images/1366700947674591237/u_YUNHnn_400x400.jpg
     name        : Minorin
@@ -15,4 +15,4 @@ members  :
     #designation : 
     github      : https://github.com/minorin22
     qiita       : https://qiita.com/minorin22
-    twitter     : https://twitter.com/MinoriMizutama/
+    #twitter     : https://twitter.com/MinoriMizutama/
