--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ baseURL       = "https://studio-mizutama.net/"
 DefaultContentLanguage = "en"
 #DefaultContentLanguageInSubdir = true
 title         = "Studio Mizutama Official Site"
+description   = "Studio Mizutama produces animation and other video works, applications for video production, and web media. Our goal is to contribute to the promotion of the digital media production field by publishing the results and the technical knowledge gained through the production. We publish them on GitHub and Qiita."
 theme         = "roxo"
 summarylength = 25
 publishDir    = "docs"
